Published turn-in link for PS#13 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/28/2021 9:57 am)
+                              >(Last update: 4/29/2021 4:40 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,8 +89,8 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         4/21
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/30<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31966221"
+       <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/32243917"
 		>4/30</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
