--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/29/2021 4:40 pm)
+                              >(Last update: 4/29/2021 5:04 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -124,9 +124,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/3110075/assignments/32131362"
 		>4/23</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/xxxxxxxxxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/207202521/download?download_frd=1"
+        >4/26</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Effects of feedback on stability       <br>&nbsp;
 		Read: 11.7, 11.8, 11.9, 11.10                  <br>&nbsp;
