Added a section on supercardiod microphones and a summary to HoW_S 	new file:   HOW_S/MICS/Super_Cardiod_with_monitors.xcf 	new file:   HOW_S/MICS/Super_Cardioid_with_monitors.jpg 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1253,20 +1253,162 @@ to miniaturize) to seem minor or even negligible.  For this reason most
 houses-of-worship use cardioid microphones almost exclusively except for 
 a few niche situations (primarily lavalier and ear-set microphones that 
 need miniaturization).  All the microphones at Covenant church are 
-cardioid except the pastor's ear-set microphone (which is omnidirectional).  
+cardioid except the pastor's ear-set microphone (which is omnidirectional).<br><br>
 
 
+<img src="Super_Cardioid_logo.png"><i><b>Super cardioid</i></b><br>
+<ul>
+   <li>Picks up from directly in front, rejects from about 120&deg;, some rear sensitivity.</li>
+   <li>Can help reduce feedback problems when floor-wedge monitors are used.</li>
+   <li>Proximity effect can be fairly strong</li>
+   <li>Sounds entering from the rear or sides can be distorted.</li>
+</ul>
 
+A super cardioid microphone is constructed similarly to a cardioid microphone except 
+that the capsule is a little more open at the back, giving it a directional pickup 
+pattern that is weighted a little more toward a figure-of-eight pattern than for 
+a cardioid.  This means that rejection of sounds arriving from the back side of the 
+microphone at &pm;180&deg; are not completely rejected.  Instead, the angle of 
+complete rejection is reduced to about &pm120&deg;.  
 
+<p align="center"><img src="Super_cardioid.png"><br>
+<i>Above:  The ideal super cardioid pattern.  The numbers around the outside of the 
+plot show the angle, in degrees, from which a sound may arrive.  The numbers between 
+0 and 1 on the radius to the right of 90 degrees label the fractional amount of sound 
+that might be picked up relative to an on-axis arrival.  If you multiply this number 
+by 100 you get the percentage of sound that might be picked up relative to an on-axis 
+arrival.  Maximum rejection of sound is at an angle of 120&deg;.  There is some pickup 
+of sounds arriving from the direct rearward end the microphone.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
+<br><p>
 
+An exemplary application of a super cardioid microphone is a vocal microphone with a 
+floor-wedge monitor speaker near the base of the microphone stand.  There are two 
+reasons why it is important to arrange the monitor speaker and microphone so that 
+the microphone can reject the sound arriving from the monitor speaker.  First, 
+sound arriving from the rear of any microphone except an omnidirectional microphone 
+is likely to be distorted and hollow-sounding to the extent that the microphone 
+picks it up.  Secondly, if there is enough pickup from the monitor speaker feedback 
+howl will ensue.  In most cases a cardioid microphone can do an adequate job of 
+rejecting sounds from floor-wedge monitors if the monitors are set five or six feet
+beyond the microphone stand toward the congregation.  However if the monitor can 
+be brought closer to the vocalist it will not have to be driven as hard to make it 
+adequately loud at the vocalist's ears.  But as the monitor is moved closer to the 
+microphone the angle of sound arrival encourages more sound to be picked up if a 
+cardioid microphone is used.  In contrast, if a super-cardioid microphone is used, 
+then the monitor can be moved into a position closer to the angle of maximum rejection
+from the microphone.  In a case such as illustrated below where the monitor speakers 
+need to be close to the base of the microphone stand then a super cardioid microphone 
+will be a better choice than a cardioid microphone.  
 
+<p align="center"><img src="Super_cardioid_with_monitors.jpg"><br>
+<i>Above:  A super cardioid microphone is used along with floor-wedge monitors.
+The green lines illustrate the approximate angles of sensitivity.  The red 
+lines illustrate the approximate angles of rejection.  The monitors are placed
+relative to the microphone to achieve strong rejection.  </i>
+<small><a href="https://en.wikipedia.org/wiki/File:Vera_Project_12.jpg"
+>Wikimedia Commons</a> (modified).<br></small>
+<br><p>
 
+The reader might wonder why a super cardioid pattern is not generally better than 
+a cardioid pattern for house-of-worship situations.  The philosophical answer is that 
+you should never expect a free lunch.  Super cardioid microphones come with a set of 
+issues that are hard to work with.  The angle of high-fidelity acceptance is usually 
+so narrow that most vocalists will not be able to completely stay within that desirable 
+angle, especially if the microphone is hand-held.  The result will be that the tonal 
+quality of the sound will vary as the performer moves around.  Additionally, the 
+proximity effect is usually more pronounced, giving the microphone a heavy sort of tone 
+whenever it is close to the sound source.  In <a href="https://www.youtube.com/watch?v=xDUOZGLFmvA&t=2s">this video</a> at 3:30 to 
+about 4:00 you can hear the typical sound of a super cardioid microphone including the 
+strong proximity effect and a slight variation in tonal quality as the microphone is 
+moved around.  A performer using a super cardioid microphone needs to be aware of these
+difficulties and needs to stay properly positioned relative to the microphone to get
+good results.  <br><br>
 
+Overall, for house-of-worship situations a super cardioid microphone may on occasion be 
+used to advantage, especially with regard to the use of floor-wedge monitors, but 
+in most situations a cardioid microphone will give more optimal results overall.  <br><br>
 
+A microphone that is similar to a super cardioid is a hyper cardioid microphone.  
+One must really consult the manufacturer's specifications to see how far the cardioid
+pattern has been compromised over toward that of a figure-of-eight since there is 
+no official standard for the pickup pattern of these microphones, but usually "hyper" 
+signifies that the microphone is closer to a figure-of-eight microphone with an angle 
+of maximum rejection of perhaps 100&deg; to 110&deg; whereas a super-cardioid microphone 
+is usually about a 33-67 compromise between a cardioid and a figure-of-eight pattern with 
+a maximum rejection angle of about 120&deg; <br><br>
 
+<img src="Omni_logo.png"> <img src="Cardioid_logo.png"> <img src="Super_Cardioid_logo.png"> 
+<img src="Figure_eight_logo.png"><i><b> Directionality Summary</i></b><br>
 
+Microphones can be sensitive to either the absolute pressure vibrations in the 
+air that create sound, or they can be sensitive to the velocity of the air molecules 
+that are moving to create pressure vibrations and sound, or they can be sensitive to
+some combination of both.  Microphones sensitive to pressure variations only are 
+theoretically omnidirectional.  Microphones sensitive to velocity variations only 
+theoretically have a figure-of-eight directional pattern, with the pickup from the 
+rear being out-of-phase compared to pickup from the front.  By using a combination 
+of pressure and velocity sensitivity the pickup pattern can be varied.  In theory, 
+a 50-50 combination of pressure and velocity sensitivity gives a pattern called 
+cardioid.  A 33% pressure, 67% velocity combination of pressure and velocity gives 
+a pattern called super cardioid.  Microphones with 25%-75% combinations are are 
+also available.  Sometimes these are called hyper cardioid microphones.<br><br>
 
+It is hard to keep the ratio of pressure and velocity sensitivity uniform across 
+all frequencies.  This means that omnidirectional and figure-of-eight microphones 
+tend to give flatter frequency responses for off-axis arriving sounds.  Other 
+microphones tend to not only attenuate sounds arriving from null angles, they 
+also tend to give these sounds a hollow colorations, sort of like an old telephone.  
+Of course, some microphones have less coloration of off-axis sounds than others.<br><br>
 
+Plosive sounds in vocals, such as "p,", "b," "s," and "t" sounds are not purely 
+from the vibrations and pressure waves of air.  Some parts of these sounds are 
+from an explosive addition of air molecules emanating from the sound source.  
+Velocity-sensitive microphones are very sensitive to these sounds.  In a 
+non-amplified environment people are not close enough together to hear the 
+plosive content of plosive sounds, thus a velocity sensitive microphone needs 
+wind screening to attenuate plosive sounds.  Although this effect is especially 
+strong with a velocity sensitive microphone, the turbulence of air-flow around 
+a capsule can leave an omnidirectional microphone with some sensitivity to 
+plosives as well.  Wind screening around a microphone capsule should be used 
+to attenuate plosives even for an omnidirectional microphone, but it is 
+especially important with the more directional patterns.<br><br>
+
+Close to a sound source the sound waves are curved.  This makes no difference 
+for a pressure-sensitive microphone, but it does matter for a velocity sensitive 
+microphone.  This gives every velocity-sensitive microphone a proximity effect.  
+A figure-of-eight microphone has a strong proximity effect because it is totally 
+velocity sensitive.  The effect is so strong that usually all sources are kept 
+at least three or even six inches from the capsule.   Omnidirectional microphones 
+have no proximity effect.  That, in combination with a lack of coloration of 
+off-axis arriving sounds gives these microphones a natural advantage in 
+high-fidelity pickup.  A little proximity effect tends to be flattering to most 
+vocals, both masculine and feminine.  This, plus the intuitively notion that 
+the microphone ought to reject sounds from the rear, plus the feedback rejection 
+that results from a controlled use of the directionality of a microphone, 
+makes cardioid microphones  the most popular overall choice for house-of-worship 
+microphone applications.<br><br>
+
+A <a href="">demonstration of microphone pick-up patterns</a> can be found at 
+the video-link in this sentence.  See especially the part from 7:30 to 9:10.  
+Listen to the hollow character of the sound of the voice when the sound is 
+arriving from an angle that should cause rejection.  In addition to the 
+attenuation of the sound, the character of the sound is ugly when it arrives 
+off-axis.  The microphone being demonstrated here is a very expensive and 
+high-quality model, yet this coloration is still audible.  Also listen to the 
+room echo that the omnidirectional microphone picks up, and which is rejected 
+to varying degrees by the other patterns.  This room-echo may be used to 
+very pleasing effect in a studio environment, but it is usually 
+out-of-control in a live-sound environment leading to an uncontrollable mix.  
+<br><br>
+
+Directionality exists on a continuum from no directionality at all&mdash;that being 
+an omnidirectional pattern&mdash;to maximum directionality&mdash;a figure-of-eight 
+pattern.  Omnidirectional microphones are the easiest to miniaturize and 
+the easiest to design for high-fidelity.  Highly directional microphones 
+such as the figure-of-eight microphone tend to compromise fidelity or 
+size and weight or both.<br><br>  
 
 
 
@@ -1277,7 +1419,7 @@ cardioid except the pastor's ear-set microphone (which is omnidirectional).
 
 Planned for the future on this page:<br>
 <br>
-2.) Super-cardioid, bi-directional, shotgun microphones<br>
+2.) shotgun microphones<br>
 3.) Audio Fidelity<br>
 -Capsule technologies<br><br>
 
