Fixed two broken links in the previous commit 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1302,7 +1302,7 @@ from the microphone.  In a case such as illustrated below where the monitor spea
 need to be close to the base of the microphone stand then a super cardioid microphone 
 will be a better choice than a cardioid microphone.  
 
-<p align="center"><img src="Super_cardioid_with_monitors.jpg"><br>
+<p align="center"><img src="Super_Cardioid_with_monitors.jpg"><br>
 <i>Above:  A super cardioid microphone is used along with floor-wedge monitors.
 The green lines illustrate the approximate angles of sensitivity.  The red 
 lines illustrate the approximate angles of rejection.  The monitors are placed
@@ -1390,7 +1390,8 @@ that results from a controlled use of the directionality of a microphone,
 makes cardioid microphones  the most popular overall choice for house-of-worship 
 microphone applications.<br><br>
 
-A <a href="">demonstration of microphone pick-up patterns</a> can be found at 
+A <a href="https://www.youtube.com/watch?v=N0X7owMBlCY&t=8s">demonstration of 
+microphone pick-up patterns</a> can be found at 
 the video-link in this sentence.  See especially the part from 7:30 to 9:10.  
 Listen to the hollow character of the sound of the voice when the sound is 
 arriving from an angle that should cause rejection.  In addition to the 
