Published returned date for EGR323PS#13 and fixed broken links in HoW_S 	modified:   HOW_S/MICS/mic_types.html 	modified:   S21/323/323S21PS.HTM

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1267,9 +1267,9 @@ cardioid except the pastor's ear-set microphone (which is omnidirectional).<br><
 A super cardioid microphone is constructed similarly to a cardioid microphone except 
 that the capsule is a little more open at the back, giving it a directional pickup 
 pattern that is weighted a little more toward a figure-of-eight pattern than for 
-a cardioid.  This means that rejection of sounds arriving from the back side of the 
+a cardioid.  This means that sounds arriving from the back side of the 
 microphone at &pm;180&deg; are not completely rejected.  Instead, the angle of 
-complete rejection is reduced to about &pm120&deg;.  
+complete rejection is reduced from &pm;180&deg; to about &pm;120&deg;.  
 
 <p align="center"><img src="Super_cardioid.png"><br>
 <i>Above:  The ideal super cardioid pattern.  The numbers around the outside of the 
@@ -1359,14 +1359,14 @@ It is hard to keep the ratio of pressure and velocity sensitivity uniform across
 all frequencies.  This means that omnidirectional and figure-of-eight microphones 
 tend to give flatter frequency responses for off-axis arriving sounds.  Other 
 microphones tend to not only attenuate sounds arriving from null angles, they 
-also tend to give these sounds a hollow colorations, sort of like an old telephone.  
+also tend to give these sounds a hollow coloration, sort of like an old telephone.  
 Of course, some microphones have less coloration of off-axis sounds than others.<br><br>
 
 Plosive sounds in vocals, such as "p,", "b," "s," and "t" sounds are not purely 
 from the vibrations and pressure waves of air.  Some parts of these sounds are 
 from an explosive addition of air molecules emanating from the sound source.  
 Velocity-sensitive microphones are very sensitive to these sounds.  In a 
-non-amplified environment people are not close enough together to hear the 
+non-amplified environment people are not close enough to hear the 
 plosive content of plosive sounds, thus a velocity sensitive microphone needs 
 wind screening to attenuate plosive sounds.  Although this effect is especially 
 strong with a velocity sensitive microphone, the turbulence of air-flow around 
@@ -1384,7 +1384,7 @@ at least three or even six inches from the capsule.   Omnidirectional microphone
 have no proximity effect.  That, in combination with a lack of coloration of 
 off-axis arriving sounds gives these microphones a natural advantage in 
 high-fidelity pickup.  A little proximity effect tends to be flattering to most 
-vocals, both masculine and feminine.  This, plus the intuitively notion that 
+vocals, both masculine and feminine.  This, plus the intuitive notion that 
 the microphone ought to reject sounds from the rear, plus the feedback rejection 
 that results from a controlled use of the directionality of a microphone, 
 makes cardioid microphones  the most popular overall choice for house-of-worship 
