--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/29/2021 5:37 pm)
+                              >(Last update: 5/03/2021 8:24 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -93,7 +93,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/3110075/assignments/32243917"
 		>4/30</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		5/03<!--<a href=
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
         >5/03</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
