Updated the ABET read me file.  It is still not finished however. 	modified:   S21/323/00_OPEN_THIS_FILE_FIRST_EGR323_S21_ABET_Read_Me.htm

--- a/S21/323/00_OPEN_THIS_FILE_FIRST_EGR323_S21_ABET_Read_Me.htm
+++ b/S21/323/00_OPEN_THIS_FILE_FIRST_EGR323_S21_ABET_Read_Me.htm
@@ -69,34 +69,35 @@ This course is offered in the spring of odd calendar years.
 
 <b>Student Work Examples from Fall, 2020</b>
 <p class="tab1x">Test #1
-   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EVuBCQAycSlLuWcDx1JoX-sBNR5IHwwpe1qMQFTi7VJsog?e=Y7KH44">Highest Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/ERz1QZXxHCFOjCY_vWvdBAgBxZOZRhFORPygU9GH-OYGrw?e=ItgwXd">Average Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/ERybKK56OvhOp1LdraYsG6EB5uOXYFOpgjrUqF1zehkhxA?e=H4WSzY">Lowest Score</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EdwpslMX5BFIqvo8LoSb92ABXutb_h9Pl3yvMcGQYmzXnA?e=zk233E">Solution key</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Ed6DjsdopXRAgTXCIRlaLZsBdDIkU5FBMh4XnHDD_KVLqg?e=sCzRUH">Grading curve and rubric</a><br>
-					<a href="https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/EjlUWyRgtzJJq45ppbv-_WcBHgQzAtCJvAqHrdaBQ2Cldg?e=0q9erq">Folder containing a copy of each graded Test #1</a>
+   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S21T1_Student_Work/363F20T1_Goossen_Elijah_graded.pdf?csf=1&web=1&e=huXg3J">Highest Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S21T1_Student_Work/363F20T1_Brummel_Brandyn_graded.pdf?csf=1&web=1&e=ijbeKy">Average Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S21T1_Student_Work/363F20T1_VandeGriend_Nolan_graded.pdf?csf=1&web=1&e=wKp2Gl">Lowest Score</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S19T1_Key.pdf?csf=1&web=1&e=kMm6EU">Solution key</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S19T1_Key.pdf?csf=1&web=1&e=kMm6EU">Grading curve and rubric</a><br>
+					<a href="https://dordt.sharepoint.com/:f:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T1/323S21T1_Student_Work?csf=1&web=1&e=UNrGKj">Folder containing a copy of each graded Test #1</a>
 <p class="tab1x">Test #2
-   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EcAncAH_WJBNtUprKISe6OIBoC9mYl0dc9RxY0Z79EoW7A?e=gTU7bQ">Highest Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EaWrCueC035Dsxcv0PBgvV4B6pmIoUqqat1XGGBnwp2JqA?e=Fl12dV">Average Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EdSLZqkhBmVPgKw-m1vtjMEBuzmdfPbLElztKf1oijJ35w?e=baQ9FL">Lowest Score</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Ea-lC1KoS8NCoJ1UNDOn-KEBxXicbzQAMu5GIdfBGgj--A?e=y5EUVD">Solution key</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EV4abQ9VDZpOjtsndlo8v7wBfzVmMne4Q_-UVUStltSyQw?e=2iXFcB">Grading curve and rubric</a><br>
-					<a href="https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/Ek0DXpsLywZPixjONN9t1jMBCzC_S7Ly3OcE9VUP-4M3tg?e=phfaYs">Folder containing a copy of each graded Test #2</a>
+   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_student_work/323S21T2_Schmidt_Ben_graded.pdf?csf=1&web=1&e=IswuZE">Highest Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_student_work/323S21T2_DeKleine_Ben_graded.pdf?csf=1&web=1&e=b4svCY">Average Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_student_work/323S21T2_Sanford_Zachary_graded.pdf?csf=1&web=1&e=lQuebl">Lowest Score</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_Key.pdf?csf=1&web=1&e=9bev1z">Solution key</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_Curve.pdf?csf=1&web=1&e=WTHo76">Grading curve and rubric</a><br>
+					<a href="https://dordt.sharepoint.com/:f:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/T2/323S21T2_student_work?csf=1&web=1&e=FbNxlL">Folder containing a copy of each graded Test #2</a>
 <p class="tab1x">Final Exam
-   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EVJ7n5A1QxtKhuyZ_m3KyJYB9oLhE2h8lRNa1XGlN847ug?e=oaG0Pk">Highest Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EV_kQjMwp1lOkZLTRrBliiABohwOYeZ33MHRfqN3ouRjQA?e=402zEs">Average Score</a>,
-                                  <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EWjYk0sZ6d5HhUCI6-IX2QIBUhlHJ1Eskg431WSCy1u0uA?e=1f95R9">Lowest Score</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EXLZ_MxYLZxBrCc1qVoSmdoB-B1CUMM8Q7lv5qxgLfcLwg?e=ZFWZSA">Solution key</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Ecr7E4jS97NBjsRwEcOz5OwB1a4LWU1BVxRDcdLrt-gD_w?e=epa7J2">Grading curve and rubric</a><br>
-					<a href="https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/Errjfp_1bZ1IoovMWZ34DUYBgcYfFNdkG2GtUeo5hskWLA?e=9ZJcvm">Folder containing a copy of each graded Final Exam</a><br>
+   <p class="tab2x">Student work: <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/Student_Work/323S21TF_graded_student_work_individual_files/323S21TF_Goossen_Elijah.pdf?csf=1&web=1&e=A6cdr7">Highest Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/Student_Work/323S21TF_graded_student_work_individual_files/323S21TF_Brummel_Brandyn.pdf?csf=1&web=1&e=2XPhoX">Average Score</a>,
+                                  <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/Student_Work/323S21TF_graded_student_work_individual_files/323S21TF_Nelson_Lucas.pdf?csf=1&web=1&e=SpTtoo">Lowest Score</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/323S20TF_Key.pdf?csf=1&web=1&e=GUF26x">Solution key</a><br>
+					<a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/323S21TF_curve.pdf?csf=1&web=1&e=2leGqP">Grading curve and rubric</a><br>
+					<a href="https://dordt.sharepoint.com/:f:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/TF/Student_Work/323S21TF_graded_student_work_individual_files?csf=1&web=1&e=PLcKPp">Folder containing a copy of each graded Final Exam</a><br>
 					
 <p class="tab1x">Laboratory
 	<p class="tab2x">Laboratory Handouts<br>
-					(The labs themselves were not graded.  Prefossor De Boer was present <br>
-					at all labs to offer guidance to students.  Only the reports were graded<br>
-					and only Labs 6 and 9 had reports assigned.)<br>
-					Lab 1 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/ESxiiayOc_1DrddF2Evk2CABe6NcyP7Rn75hhfza9D69iw?e=2T2Nnj">Transient Simulations Using PSpice, "IMRAD"</a><br>
-					Lab 2 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EcgCMV8-Q-9KjLlPVOwijc4BbCtULkQ-cC_KSbmN9F30Ew?e=MBc504">Operational Amplifiers, Xcircuit</a><br>
+					(The labs themselves were not graded except for progress on the kit construction.  
+					Professor De Boer was present at all labs to offer guidance to students.  The report 
+					 on the project&mdash;Lab 6&mdash; was the majority of the lab grade's weight.)<br>
+					Lab 1 <a href="https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-S%20FCARs/Archived%20material/EGR%20323/LAB/L1_Logic_Gates/323S21L1revB.pdf?csf=1&web=1&e=3kg2g3">Logic Gates</a><br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+					      Video <a href="https://www.youtube.com/watch?v=qkp_r9chwaQ">Introduction to the lab on Logic Gates</a><br>
+					Lab 2 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EcgCMV8-Q-9KjLlPVOwijc4BbCtULkQ-cC_KSbmN9F30Ew?e=MBc504">Clas B and C Amplifiers</a><br>
 					Lab 3 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EVknvUfWBYZLoPSQ-doHKjEBCYqM1WQWUb1PJQ9YBs85zw?e=Pe9uY2">Trasformer Characteristics and Models, Equations</a><br>
 					Lab 4 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EXCCizoyWx9AgUQ_pUU5E8IBO6UnDci_tjXnfRrbS3zVvQ?e=OWQBzd">Diode Characteristics and Models, Illustrations</a><br>
 					Lab 5 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EUl4vJsZTXlJuDheVI5ZNbQBPCO4AmKGB1jDkJwnD5HKFA?e=hO7Fz2">A Diode Used as a Current-Controlled Resistor</a><br>
@@ -169,7 +170,7 @@ This course is offered in the spring of odd calendar years.
 					 Some of the files listed on this page are in lieu of possibly-dead links.)<br><br>
 
 				 Lectures&mdash;<a href=
-				 "https://dfdeboer.github.io/F20/322/322F20DN_Sharepoint_URLs.HTM"
+				 "https://dfdeboer.github.io/S21/323/323S21DN_Sharepoint_URLs.HTM"
 				 >PDF's of lecture slides and videos of most class periods</a></p><p class="tab1x">
 				 
 <p class="tab1x"><p><b>Course Root Folder</b>
