--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1032,7 +1032,7 @@ wave-front increases resulting in weaker pressure gradients (weaker sound) being
 associated with the further wavefronts.  Moving a microphone from one inch away 
 from a source to four inches away, a motion of three inches, makes a big difference 
 in the strength of the sound at the microphone.  However if the microphone is moved 
-from thirty-one inches to thirty-four in inches away&mdash;an identical three inch 
+from thirty-one inches to thirty-four inches away&mdash;an identical three inch 
 movement&mdash; there is hardly any difference in the strength of the sound at the 
 microphone because the waves at those greater distances are hardly curved at all.<br><br>
  
@@ -1052,7 +1052,7 @@ to travel is less important.  Thus, lower frequency sounds get picked up better
 than higher-frequency sounds when the sound waves are curved, as they are near 
 the source.<br><br>  
 
-Proximity effect inherent in any velocity-sensitive microphone.  
+Proximity effect is inherent in any velocity-sensitive microphone.  
 Fundamentally, some proximity effect will always be inherent to achieving directionality.
 Although in a technical sense the proximity effect is distortion, most people find 
 that a small or moderate amount of it sounds pleasing, adding a sensation of closeness
@@ -1068,8 +1068,8 @@ deliberately trying for a honky kind of sound, say for a special effect.)  <br><
 Of all the directional microphone designs, figure-of-eight microphones display the 
 strongest proximity effects.  Only omnidirectional microphones are completely free 
 of the proximity effect because they sample the sound at a single point.  Click here 
-for a <a href="https://www.neumann.com/homestudio/en/what-is-the-proximity-effect"
->demonstration of proximity effect</a>.  (Headphones or earbuds with good low-frequency 
+for a <!--<a href="https://www.neumann.com/homestudio/en/what-is-the-proximity-effect"
+>demonstration of proximity effect</a>--><a href="https://www.youtube.com/watch?v=hzfx55aTWBI">.  (Headphones or earbuds with good low-frequency 
 response will help you hear the demonstration accurately.)  One may also note that 
 directional microphones eliminate most room resonances from the sound, mainly because 
 room resonances arrive from all directions, making an omnidirectional microphone 
@@ -1338,6 +1338,10 @@ signifies that the microphone is closer to a figure-of-eight microphone with an 
 of maximum rejection of perhaps 100&deg; to 110&deg; whereas a super-cardioid microphone 
 is usually about a 33-67 compromise between a cardioid and a figure-of-eight pattern with 
 a maximum rejection angle of about 120&deg; <br><br>
+
+<img src="Super_Cardioid_logo.png"> >> <i><b> Shotgun Microphones </b></i><br>
+More will be added here later.  The skinny story is that shotgun microphones are 
+rarely used in house-of-worship applications.<br><br>
 
 <img src="Omni_logo.png"> <img src="Cardioid_logo.png"> <img src="Super_Cardioid_logo.png"> 
 <img src="Figure_eight_logo.png"><i><b> Directionality Summary</i></b><br>
